{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 12,
  "lineage": "5bb50b10-3755-2c5f-1cc3-e2d0cf71a3df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "First-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0a28e1ba2d6cee9",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0f8a2be6f8023952e",
            "domain": "vpc",
            "id": "eipalloc-0b0a28e1ba2d6cee9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01d7da58de9540c1c",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-213-232-62.compute-1.amazonaws.com",
            "public_ip": "3.213.232.62",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.first-gw",
            "aws_network_interface.First-NIC",
            "aws_security_group.First-Web-SG",
            "aws_subnet.First-Subnet",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:735353624204:instance/i-08d11b0a780aaaaf7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d11b0a780aaaaf7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-01d7da58de9540c1c"
              }
            ],
            "primary_network_interface_id": "eni-01d7da58de9540c1c",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.213.232.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2db2fe9b63e1c08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063bf63148db6e6bd",
            "tags": {
              "Name": "Terraform-EC2-Instance"
            },
            "tags_all": {
              "Name": "Terraform-EC2-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-029cfdc430945cbb0"
            ]
          },
          "dependencies": [
            "aws_network_interface.First-NIC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "first-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735353624204:internet-gateway/igw-0cb4e35a9bc622ef1",
            "id": "igw-0cb4e35a9bc622ef1",
            "owner_id": "735353624204",
            "tags": {
              "Name": "Terraform-igw"
            },
            "tags_all": {
              "Name": "Terraform-igw"
            },
            "vpc_id": "vpc-0972721adf488db83"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "First-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735353624204:network-interface/eni-01d7da58de9540c1c",
            "id": "eni-01d7da58de9540c1c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f6:3d:c2:2c:35",
            "owner_id": "735353624204",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-029cfdc430945cbb0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063bf63148db6e6bd"
          },
          "dependencies": [
            "aws_security_group.First-Web-SG",
            "aws_subnet.First-Subnet",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "first-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735353624204:route-table/rtb-09007df6dcd0729d5",
            "id": "rtb-09007df6dcd0729d5",
            "owner_id": "735353624204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb4e35a9bc622ef1",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb4e35a9bc622ef1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-Route-Table"
            },
            "tags_all": {
              "Name": "Terraform-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0972721adf488db83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.first-gw",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "First-RA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d1dc66a43cc4402",
            "route_table_id": "rtb-09007df6dcd0729d5",
            "subnet_id": "subnet-063bf63148db6e6bd"
          },
          "dependencies": [
            "aws_internet_gateway.first-gw",
            "aws_route_table.first-route-table",
            "aws_subnet.First-Subnet",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "First-Web-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735353624204:security-group/sg-029cfdc430945cbb0",
            "description": "Allow TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029cfdc430945cbb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "735353624204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-Web-SG"
            },
            "tags_all": {
              "Name": "Terraform-Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0972721adf488db83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "First-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735353624204:subnet/subnet-063bf63148db6e6bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063bf63148db6e6bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735353624204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-Subnet"
            },
            "tags_all": {
              "Name": "Terraform-Subnet"
            },
            "vpc_id": "vpc-0972721adf488db83"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "first-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735353624204:vpc/vpc-0972721adf488db83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0104451a534b91bf1",
            "default_route_table_id": "rtb-0b0da0e4a20b6e30a",
            "default_security_group_id": "sg-07edcd5b1cf74723b",
            "dhcp_options_id": "dopt-0124126281f0f5362",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0972721adf488db83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0da0e4a20b6e30a",
            "owner_id": "735353624204",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}